# Harriet

./: .gitignore  README.md
LoadingStation/: CMakeLists.txt  LoadingStation.cpp
launcher/: respawn_highgoal.sh
raspi/: CMakeLists.txt  HighGoal.cpp  takepics.cpp  test_video.cpp
res/: LifeCamCinema.yml  LifeCamHD3000-1.yml  Toolchain-Jetson-aarch64.cmake  jetson-camera-720.yml  raspi_cam_01.yml  raspi_cam_02.yml  respawn_gearlift.sh  respawn_highgoal.sh
src/: CMakeLists.txt
src/GearLift/: GearLift.cpp
src/HighGoal/: HighGoal.cpp
src/LoadingStation/: LoadingStation.cpp
src/calibration/: calibration.cpp
